--- a/views/supervisor_to_message.hbs
+++ b/views/supervisor_to_message.hbs
@@ -257,12 +257,12 @@
                   <th width="8%" scope="col" style="background-color: #dfd1ef">
                     時間
                   </th>
-                  <th style="background-color: #dfd1ef">
-                
+                  <th style="background-color: #dfd1ef">      
                   </th>
                   <th style="background-color: #dfd1ef">
                   </th>
-                
+                  <th style="background-color: #dfd1ef">
+                  </th>       
                 </tr>
               </thead>
               <tbody>
@@ -300,7 +300,8 @@
                   <td>{{this.M_Student_ID}}</td>
                   <td>{{this.M_Date}}</td>
                   <td>{{this.M_Time}}</td>
-                  <td><buuton class='fas fa-hammer' style="font-size:32px;background-color:unset;border: none" data-bs-toggle="modal"  data-bs-target="#bc{{this.M_Number}}"name="action" value="modify" >modify</buuton></td>   <!--修改-->
+                  <td></td>
+                  <td><button class='fas fa-hammer' style="font-size:32px;background-color:unset;border: none" data-bs-toggle="modal"  data-bs-target="#bc{{this.M_Number}}"name="action" value="modify" >modify</button></td>   <!--修改-->
                           <div class="modal fade" id="bc{{this.M_Number}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
                             <div class="modal-dialog">
                               <div class="modal-content">
