--- a/views/supervisor_to_violation.hbs
+++ b/views/supervisor_to_violation.hbs
@@ -99,15 +99,15 @@
           data-bs-parent="#accordionExample">
           <div class="accordion-body">
             <div class="container">
-              <table style="line-height: 10px" class="table table-hover">
+              <table style="line-height: 20px" class="table table-hover">
               <thead>
                 <!--表示表格中不同直行 (column) 的標題-->
                 <tr style="background-color: #dfd1ef">
                   <!--定義表格的橫列 (row)-->
-                  <th scope="col" align="center" valign="middle">學生編號</th>
-                  <th scope="col" align="center" valign="middle">日期</th>
-                  <th scope="col" align="center" valign="middle">違規內容</th>
-                  <th scope="col" align="center" valign="middle">懲處</th>
+                  <th scope="col" align="center" valign="middle"style="font-size: 20px;">學生編號</th>
+                  <th scope="col" align="center" valign="middle"style="font-size: 20px;">日期</th>
+                  <th scope="col" align="center" valign="middle"style="font-size: 20px;">違規內容</th>
+                  <th scope="col" align="center" valign="middle"style="font-size: 20px;">懲處</th>
                   <th></th>
                   <th></th>
                 </tr>
@@ -148,15 +148,15 @@
     <br /><br /><br />
 <div class="container">
     <div class="accordion-body">
-      <table style="line-height: 10px" class="table table-hover">
+      <table style="line-height: 20px" class="table table-hover">
         <thead>
           <!--表示表格中不同直行 (column) 的標題-->
-          <tr style="background-color: #dfd1ef">
+          <tr style="background-color: #dfd1ef;">
             <!--定義表格的橫列 (row)-->
-            <th scope="col" align="center" valign="middle">學生編號</th>
-            <th scope="col" align="center" valign="middle">違規內容</th>
-            <th scope="col" align="center" valign="middle">日期</th>
-            <th scope="col" align="center" valign="middle">懲處</th>
+            <th scope="col" align="center" valign="middle" style="font-size: 20px;">學生編號</th>
+            <th scope="col" align="center" valign="middle"style="font-size: 20px;">違規內容</th>
+            <th scope="col" align="center" valign="middle"style="font-size: 20px;">日期</th>
+            <th scope="col" align="center" valign="middle"style="font-size: 20px;">懲處</th>
             <th></th>
             <th></th>
           </tr>
