--- a/views/manager_to_dormitory.hbs
+++ b/views/manager_to_dormitory.hbs
@@ -83,15 +83,13 @@
             <table
               style="line-height: 10px"
               class="table table-hover">
-              <thead>
-                <!--表示表格中不同直行 (column) 的標題-->
+              {{!-- <thead>
                 <tr style="background-color: #dfd1ef">
-                  <!--定義表格的橫列 (row)-->
                  <th></th>
                   <th></th>
                   <th></th>
                 </tr>
-              </thead>
+              </thead> --}}
               <form action="/managerToDormitory/action" method="post">
                 <tr>
                   {{!-- <td align='center' valign="middle">
