--- a/views/supervisor_equipment.hbs
+++ b/views/supervisor_equipment.hbs
@@ -35,22 +35,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="list-inline-item">
-              <a href="/" class="home">
+              <a href="/" class="home"> 
                 <span class="fa-stack fa-lg">
-                  <button data-bs-toggle="tooltip" data-bs-placement="top" title="返回首頁" style="width: 50px; height: 50px;color:#ffffff" class="fa-solid fa-house-user"></button>
+                  <button data-bs-toggle="tooltip" data-bs-placement="top" title="返回首頁"
+                    style="width: 50px; height: 50px;color:#ffffff"
+                    class="fa-solid fa-house-user"
+                  ></button>
                 </span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="supervisor_to_dormitory">back</a
-              >
+             <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              href="/supervisor_to_dormitory">大樓宿舍資料</a>
             </li>
-            <li class="nav-item">
-              <a
-                class="nav-link px-lg-3 py-3 py-lg-4"
-                href="/dormitory_detail"
-                >Introduction</a
-              >
+             <li class="nav-item">
+              <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
+              href="/supervisor_to_studentAccommodation">學生住宿資訊</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4"
