--- a/views/manager_equipment.hbs
+++ b/views/manager_equipment.hbs
@@ -214,14 +214,14 @@
                 type="submit" name="action" value="update"> 更新狀況</button>
             </td>
             <td>
-              <button
-                style=" width: 120px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
-                type="submit" name="action" value="delete"> 刪除設備</button>
-            </td>
-            <td>
               <button id="finish"
                 style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff;; color: #ffffff; border: 2px #5769b4 outset;"
                 type="submit" name="action" value="finish"> 完成</button>
+            </td>
+              <td>
+                  <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none"  type="submit" name="action" value="delete">
+                      delete
+                    </button>
             </td>
           </form>
         </tr>
@@ -331,7 +331,7 @@
             <td valign="middle">{{this.E_Type}}</td>
 
             <td valign="middle">
-                  <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none"  type="submit" name="action" value="delete">
+              <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none"  type="submit" name="action" value="delete">
                               delete
                     </button>
             </td>
