--- a/views/supervisor_to_message.hbs
+++ b/views/supervisor_to_message.hbs
@@ -301,7 +301,7 @@
                   <td>{{this.M_Date}}</td>
                   <td>{{this.M_Time}}</td>
                   <td></td>
-                  <td><button class='fas fa-hammer' style="font-size:32px;background-color:unset;border: none" data-bs-toggle="modal"  data-bs-target="#bc{{this.M_Number}}"name="action" value="modify" >modify</button></td>   <!--修改-->
+                  <td><button class='fas fa-hammer' style="font-size:32px;background-color:unset;border: none;" data-bs-toggle="modal"  data-bs-target="#bc{{this.M_Number}}"name="action" value="modify" >modify</button></td>   <!--修改-->
                           <div class="modal fade" id="bc{{this.M_Number}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
                             <div class="modal-dialog">
                               <div class="modal-content">
