--- a/views/manager_to_apply.hbs
+++ b/views/manager_to_apply.hbs
@@ -174,10 +174,10 @@
       <tbody>
         {{#each message}}
         <tr>
-          <td >{{this.A_Student_ID}}</td>
-          <td >{{this.A_Date}}</td>
-          <td >{{this.A_Approval}}</td>
-          <td >{{this.A_Bill}}</td>
+          <td valign="middle">{{this.A_Student_ID}}</td>
+          <td valign="middle">{{this.A_Date}}</td>
+          <td valign="middle">{{this.A_Approval}}</td>
+          <td valign="middle">{{this.A_Bill}}</td>
           <td></td>
           <td></td>
             {{#if this.boolean}}
