--- a/views/visitor_dormitory_detail.hbs
+++ b/views/visitor_dormitory_detail.hbs
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="list-inline-item">
-                <a href="/" class="home">
+                <a href="/home_visitor" class="home">
                     <span class="fa-stack fa-lg">
                       <button data-bs-toggle="tooltip" data-bs-placement="top" title="返回首頁"
                       style="width: 50px; height: 50px;color:#ffffff"
