pay infor all: manager to apply

--- a/views/manager_to_apply.hbs
+++ b/views/manager_to_apply.hbs
@@ -157,6 +157,10 @@
 <div class="container">
   <div class="accordion-body">
     <table style="line-height: 10px" class="table table-hover">
+      <form action="/managerToApply/informAll" method="POST">
+        <input type="hidden" name="searchSQL" value="{{searchSQL}}">
+        <button type="submit" style=" width: 150px; height: 40px; background-color: #02186f; color: #ffffff;float:right; border: 2px #5769b4 outset; ">一鍵催繳</button>
+      </form>
       <thead>
         <!--表示表格中不同直行 (column) 的標題-->
         <tr style="background-color: #dfd1ef">
