--- a/public/p2.css
+++ b/public/p2.css
@@ -4,26 +4,11 @@
         box-sizing: border-box;
       }
       :root {
-        --line-border-fill: #215199; /*填滿狀態*/
-        --line-border-empty: #94b7eb; /*未填滿狀態*/
+        --line-border-fill: #f33252; /*填滿狀態*/
+        --line-border-empty: #f98e8ec6; /*未填滿狀態*/
         --btn-hover: #42679e;
       }
-      /* body {
-      
-        margin: 0;
-        padding: 0;
-        display: flex; 
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        overflow: hidden;
-      }
-      
-      .container {
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-      } 
+
       
       /* 進度條容器 */
       .progress-container {
@@ -63,7 +48,7 @@
       /* 步驟1、2、3、4 */
       div.circle {
         color: white;
-        background-color: #335495;
+        background-color: #f34764;
         border: 3px solid var(--line-border-empty);
         border-radius: 50%;
         width: 30px;
