--- a/views/manager_equipment.hbs
+++ b/views/manager_equipment.hbs
@@ -216,12 +216,11 @@
             <td>
               <button id="finish"
                 style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff;; color: #ffffff; border: 2px #5769b4 outset;"
-                type="submit" name="action" value="finish"> 完成</button>
+                type="submit" name="action" value="finish"> 結案</button>
             </td>
               <td>
-                  <button class="material-icons" style="font-size:40px;color:red;background-color:unset;border: none"  type="submit" name="action" value="delete">
-                      delete
-                    </button>
+                <button style=" width: 80px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset;"
+             type="submit" name="action" value="delete"> 刪除</button>  
             </td>
           </form>
         </tr>
