--- a/views/manager_checkout_dormitory.hbs
+++ b/views/manager_checkout_dormitory.hbs
@@ -87,40 +87,44 @@
         </div>
       </div>
     </header>
-    <!-- Main Content-->
-    <div class="accordion" id="accordionExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢資料</button>
-          <i class="fa-solid fa-caret-down"></i>
-        </h2>
-        <div
-          id="collapseOne"
-          class="accordion-collapse collapse"
-          aria-labelledby="headingOne"
-          data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            <div class="container">
+  <div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOne">
+        <button class="button"
+          style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; "
+          type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+          aria-controls="collapseOne"> 查詢學生住宿資訊</button>
+        <i class="fa-solid fa-caret-down"></i>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+        data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <div class="container">
             <table style="line-height: 10px" class="table table-hover">
               <thead>
                 <!--表示表格中不同直行 (column) 的標題-->
                 <tr style="background-color: #dfd1ef">
                   <!--定義表格的橫列 (row)-->
-                  <th scope="col"align='center' valign="middle">學生編號</th>
-                  <th scope="col"align='center' valign="middle">學年度</th>
-                  <th scope="col"align='center' valign="middle">學期</th>
-                  <th scope="col"align='center' valign="middle">申請日期</th>
-                  <th scope="col"align='center' valign="middle">審核狀況</th>
-                  <th scope="col"align='center' valign="middle">繳費狀況</th>
+                  <th scope="col" align='center' valign="middle">學生編號</th>
+                  <th scope="col" align='center' valign="middle">姓名</th>
+                  <th scope="col" align='center' valign="middle">學年度</th>
+                  <th scope="col" align='center' valign="middle">性別</th>
+                  <th scope="col" align='center' valign="middle">住宿大樓</th>
+                  <th scope="col" align='center' valign="middle">宿舍房號</th>
                   <th></th>
                 </tr>
               </thead>
-              <form action="" method="POST">
+              <form action="/managerToCheckoutDormitory/action" method="POST" id="submitform">
                 <tr>
                   <td align='center' valign="middle">
-                    <input type="text" class="form-control" id="studentID" name="studentID" value="" placeholder="" style="width: 100px"/>
+                    <input type="text" class="form-control" id="studentID" name="studentID" value="" placeholder=""
+                      style="width: 100px" />
                   </td>
-                  <td align='center' valign="middle"> 
+                  <td align='center' valign="middle">
+                    <input type="text" class="form-control" id="sname" name="name" value="" placeholder=""
+                      style="width: 130px" />
+                  </td>
+                  <td align='center' valign="middle">
                     <select id="academicYear" name="academicYear" style="width: 130px" class="form-select">
                       <option selected>選擇學年度</option>
                       <option value="111">111</option>
@@ -132,133 +136,118 @@
                     </select>
                   </td>
                   <td align='center' valign="middle">
-                    <select id="semester" name="semester" style="width: 130px" class="form-select" >
-                      <option selected>選擇學期</option>
-                      <option value="上">上學期</option>
-                      <option value="下">下學期</option>
+                    <select id="sex" name="sex" style="width: 130px" class="form-select">
+                      <option selected>選擇性別</option>
+                      <option value="男">男</option>
+                      <option value="女">女</option>
                     </select>
                   </td>
                   <td align='center' valign="middle">
-                    <input type="text" class="form-control" id="date" name="date" value="" placeholder="xxxx/xx/xx" style="width: 120px" />
-                  </td>
-                  <td align='center' valign="middle"> 
-                    <select id="approval" name="approval" style="width: 130px" class="form-select" >
-                      <option selected>審核狀況</option>
-                      <option value="2">尚未審核</option>
-                      <option value="1">已核准</option>
-                      <option value="0">不核准</option>
+                    <select id="building" name="building" class="form-select">
+                      <option selected>選擇大樓</option>
+                      {{#each Dormessage}}
+                      <option value={{this.DB_Number}}>{{this.DB_Name}}</option>
+                      {{/each}}
                     </select>
                   </td>
                   <td align='center' valign="middle">
-                    <select id="bill" name="bill" style="width: 130px" class="form-select" > 
-                    <option selected>繳費狀況</option> 
-                    <option value="1">已繳交</option> 
-                    <option value="0">未繳交</option>
-                    </select>
+                    <input type="text" class="form-control" id="room" name="room" value="" style="width: 130px" />
                   </td>
                   <td>
                     <button
                       style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; "
-                      type="submit"
-                      name="action"
-                      value="search">
-                      查詢
-                    </button>
+                      id="query" type="submit" name="action" value="search">查詢</button>
                   </td>
                 </tr>
               </form>
             </table>
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <br /><br /><br />
-<div class="container">
-  <div class="accordion-body">
-    <table style="line-height: 10px" class="table table-hover">
-      <thead>
-        <!--表示表格中不同直行 (column) 的標題-->
-        <tr style="background-color: #dfd1ef">
-          <!--定義表格的橫列 (row)-->
-          <th scope="col">學生編號</th>
-          <th scope="col">學年度</th>
-          <th scope="col">學期</th>
-          <th scope="col">申請日期</th>
-          <th scope="col">審核狀況</th>
-          <th scope="col">繳費狀況</th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each message}}
-        <tr>
-          <td >{{this.A_Student_ID}}</td>
-          <td >{{this.A_Academic_Year}}</td>
-          <td >{{this.A_Semester}}</td>
-          <td >{{this.A_Date}}</td>
-          <td >{{this.A_Approval}}</td>
-          <td >{{this.A_Bill}}</td>
-          <td></td>
-          <td></td>
-            {{#if this.boolean}}
-              <form action="/managerToApply/action" method="post">
-              <input type="hidden" name="searchSQL" value="{{../searchSQL}}">
-              <input type="hidden" name="number" value="{{this.A_Number}}">
-              <input type="hidden" name="studentID" value="{{this.A_Student_ID}}">
-              <td>
-                <button type="submit" name="action"  style=" width: 100px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset; "value="approval">核准</button>
-              </td>
-              <td>
-                <button type="submit" name="action" style=" width: 100px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset; "value="deny">不核准</button>
-              </td>
-              </form>
-            {{/if}}
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
-    {{#if full_message}}
-    <div class="alert alert-danger" role="alert">
-        {{full_message}}
-    </div>
-    {{/if}}
   </div>
-</div>
-    <!-- Footer-->
-    <br /><br /><br /><br /><br /><br />
-    <footer class="border-top">
-      <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-          <div class="col-md-10 col-lg-8 col-xl-7">
-            <div id="top-footer">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-6 contact">
-                    <i class="fa-solid fa-paperclip" style="display: inline;float: left;width: 30px;height: 30px;"></i>
-                    <h3>高雄大學網站:</h3>
-                   
-                    <a href="https://www.nuk.edu.tw/" target="_blank" 
-                      >https://www.nuk.edu.tw/</a
-                    >
-                  </div>
-                  <div class="col-md-6 social">
-                    <i class="fa-solid fa-chalkboard-user" style="display: inline;float: left;width: 30px;height: 30px;"></i>
-                    <h3>moodle平台:</h3>
-                    <a href="https://elearningv4.nuk.edu.tw/" target="_blank">https://elearningv4.nuk.edu.tw/</a>
-                  </div>
+  <br /><br /><br />
+  <div class="container">
+    <div class="accordion-body">
+      <table style="line-height: 10px" class="table table-hover">
+        <thead>
+          <!--表示表格中不同直行 (column) 的標題-->
+          <tr style="background-color: #dfd1ef">
+            <!--定義表格的橫列 (row)-->
+            <th align='center' valign="middle" scope="col">學生編號</th>
+            <th align='center' valign="middle" scope="col">姓名</th>
+            <th align='center' valign="middle" scope="col">學年度</th>
+            <th align='center' valign="middle" scope="col">性別</th>
+            <th align='center' valign="middle" scope="col">住宿大樓</th>
+            <th align='center' valign="middle" scope="col">宿舍房號</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each message}}
+          <tr>
+            <form action="/managerToCheckoutDormitory/action" method="post">
+              <td valign="middle">{{this.S_ID}}</td>
+              <td valign="middle">{{this.S_Name}}</td>
+              <td valign="middle">{{this.S_Academic_Year}}</td>
+              <td valign="middle">{{this.S_Sex}}</td>
+              <td valign="middle" id="building" name="building"  value={{this.db.DB_Number}}>
+                {{this.db.DB_Name}}           
+              </td>
+              <input type="hidden" name="searchSQL" value="{{../searchSQL}}">
+              {{!-- <input type="hidden" name="number" value="{{this.A_Number}}"> --}}
+              <input type="hidden" name="studentID" value="{{this.S_ID}}">
+              <td valign="middle" name="room" value="{{this.S_Dormitory_No}}">{{this.S_Dormitory_No}}
+              </td>
+
+              <td>
+                <button type="submit" name="action"
+                  style=" width: 100px; height: 40px; background-color: #e74a3b; color: #ffffff; border: 2px #d44141 outset; "
+                  value="delete">刪除</button>
+              </td>
+            </form>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+      {{!-- {{#if full_message}}
+      <div class="alert alert-danger" role="alert">
+        {{full_message}}
+      </div>
+      {{/if}} --}}
+    </div>
+  </div>
+  <!-- Footer-->
+  <br /><br /><br /><br /><br /><br />
+  <footer class="border-top">
+    <div class="container px-4 px-lg-5">
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+          <div id="top-footer">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6 contact">
+                  <i class="fa-solid fa-paperclip" style="display: inline;float: left;width: 30px;height: 30px;"></i>
+                  <h3>高雄大學網站:</h3>
+
+                  <a href="https://www.nuk.edu.tw/" target="_blank">https://www.nuk.edu.tw/</a>
+                </div>
+                <div class="col-md-6 social">
+                  <i class="fa-solid fa-chalkboard-user"
+                    style="display: inline;float: left;width: 30px;height: 30px;"></i>
+                  <h3>moodle平台:</h3>
+                  <a href="https://elearningv4.nuk.edu.tw/" target="_blank">https://elearningv4.nuk.edu.tw/</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-  </body>
+    </div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  {{!-- <script src="manager_to_dormitory.js"></script> --}}
+</body>
 </html>
