--- a/views/student_fix.hbs
+++ b/views/student_fix.hbs
@@ -111,7 +111,7 @@
                   </td>
                   <td>
                     <button style=" width: 120px; height: 40px; background-color: #5769b4; color: #ffffff; border: 2px #5769b4 outset;" 
-                    type="submit" name="action" value="update"> 更新狀況</button>
+                    type="submit" name="action" value="update"> 報修</button>
                   </td>
                 </form>
               </tr>
