--- a/views/student_to_dormitory.hbs
+++ b/views/student_to_dormitory.hbs
@@ -60,13 +60,20 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link px-lg-3 py-3 py-lg-4"
+                class="nav-link px-lg-3 py-3 py-lg-4"style="font-size:15px"
                 href="/dormitory_detail"
                 >Introduction</a
               >
             </li>
+              <li class="nav-item">
+              <a
+                class="nav-link px-lg-3 py-3 py-lg-4"style="font-size:15px"
+                href="/student_fix"
+                >報修宿舍設備</a
+              >
+            </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4"
+              <a class="nav-link px-lg-3 py-3 py-lg-4"style="font-size:15px"
               href="/login">Log out</a>
             </li>
           </ul>
@@ -88,40 +95,176 @@
         </div>
       </div>
     </header>
-    <!-- Post Content-->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <p align="center" style="color: #000000; font-weight: bold; font-size: 20px"> 宿舍資訊 </p>
-          <table style="line-height: 30px" class="table table-hover">
-            <thead>
-              <!--表示表格中不同直行 (column) 的標題-->
-              <tr style="background-color: #dfd1ef">
-                <!--定義表格的橫列 (row)-->
-                <th scope="col" >大樓代號</th>
-                <th scope="col" >名稱</th>
-                <th scope="col" >房型</th>
-                <th scope="col" >住宿費用</th>
-              </tr>
-            </thead>
-            <tbody>
-            {{#each message}}
-              <tr>
-                <td valign="middle">{{this.DB_Number}}</td>
-                <td valign="middle">{{this.DB_Name}}</td>
-                <td valign="middle">{{this.D_Capacity}}</td>
-                <td valign="middle">{{this.D_Cost}}</td>
-              </tr>
-            {{/each}}
-          </tbody>
-          </table>
-
-          <div class="d-flex justify-content-end mb-4">
-            <a class="btn btn-primary text-uppercase" href="/student_fix">報修宿舍設備 →</a>
+   <!-- 大樓-->
+    <div class="accordion" id="accordionExample">
+      <br />
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+           <form action="/studentToDormitory/action" method="post">
+          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000;" type="submit"  name="action"  value="searchDormitory" > 查詢大樓資料 </button>
+          </form>
+          {{!-- <i class="fa-solid fa-caret-down"></i> --}}
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">  
+            <div class="container">
+            <table
+              style="line-height: 10px"
+              class="table table-hover">
+              <thead>
+                <!--表示表格中不同直行 (column) 的標題-->
+                <tr style="background-color: #dfd1ef">
+                  <!--定義表格的橫列 (row)-->
+                 <th></th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+              {{!-- <form action="/managerToDormitory/action" method="post">
+                {{!-- <tr>
+                  {{!-- <td align='center' valign="middle">
+                    <select id="building" name="building" class="form-select">
+                      <option selected>選擇大樓</option>
+                      <option value=1>學生第一宿舍(OA-男)</option>
+                      <option value=2>學生第一宿舍(OB-女)</option>
+                      <option value=3>學生第二宿舍(OE-男)</option>
+                      <option value=4>學生第二宿舍(OF-女)</option>
+                      <option value=5>綜合宿舍(B01-男)</option>
+                    </select>
+                  </td>
+                  <td align='center' valign="middle">
+                    <input type="text" class="form-control" id="manager" name="manager" value=""/>
+                  </td> --}}
+                    
+                  <td>
+                    <button  id="search"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="searchDormitory">  查詢
+                    </button>
+                  </td>                
+                </tr> --}}
+              </form> --}}
+           </table>
+           <br>
           </div>
         </div>
-      </div>
+     </div>  
     </div>
+  </div>
+  <br> <br>
+   <div class="container">
+    <table style="line-height: 30px" class="table  table-hover">
+      <thead>
+        <!--表示表格中不同直行 (column) 的標題-->
+        <tr style="background-color: #dfd1ef">
+          <!--定義表格的橫列 (row)-->
+          <th scope="col" align='center' valign="middle">大樓名稱</th>
+          <th scope="col" align='center' valign="middle">大樓管理員</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each Buildingmessage}}
+        <tr>
+          
+            <input type="hidden" name="searchSQL" value="{{../searchSQL}}"/>
+            <input type="hidden" name="buildingNum" value="{{this.DB_Number}}">
+            {{!-- <input type="hidden" name="managerID" value="{{this.DB_Manager_ID}}"> --}}
+            <th scope="row" align='center' valign="middle">
+            {{this.DB_Name}}
+            </th>
+              <td>{{this.DB_Manager_ID}}</td>
+       
+        </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  </div>
+  <br><br>
+  <hr style="border:3px #cccccc solid;" >
+  {{!-- 宿舍 --}}
+    <div class="accordion" id="accordionExample1">
+      <br />
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne1">
+          <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne1" aria-expanded="false" aria-controls="collapseOne1"> 查詢宿舍資料 </button>
+          <i class="fa-solid fa-caret-down"></i>
+        </h2>
+        <div id="collapseOne1" class="accordion-collapse collapse" aria-labelledby="headingOne1" data-bs-parent="#accordionExample1">
+          <div class="accordion-body">  
+            <div class="container">
+            <table
+              style="line-height: 10px"
+              class="table table-hover">
+              <thead>
+                <!--表示表格中不同直行 (column) 的標題-->
+                <tr style="background-color: #dfd1ef">
+                  <!--定義表格的橫列 (row)-->
+                  <th scope="col" align='center' valign="middle">大樓名稱</th>
+                  <th scope="col" align='center' valign="middle">宿舍房號</th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+              <form action="/studentToDormitory/action" method="post">
+                <tr>
+                  <td align='center' valign="middle">
+                    <select id="building" name="buildingSearch" class="form-select">
+                      {{#each Dormessage}}
+                        <option value={{this.DB_Number}}>{{this.DB_Name}}</option>
+                      {{/each}}
+                    </select>
+                  </td>
+                  <td align='center' valign="middle">
+                    <input type="text" class="form-control" id="roomSearch" name="roomSearch" value=""/>
+                  </td>
+                    <td align='center' valign="middle">  
+                  <td>
+                    <button  id="search"  style=" width: 120px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"  type="submit"  name="action"  value="searchRoom">  查詢
+                    </button>
+                  </td>                
+                </tr>
+              </form>
+           </table>
+           <br>
+          </div>
+        </div>
+     </div>  
+    </div>
+  </div>
+  <br><br>
+ <div class="container">
+  <table style="line-height: 30px" class="table  table-hover">
+    <thead>
+      <!--表示表格中不同直行 (column) 的標題-->
+      <tr style="background-color: #dfd1ef">
+        <!--定義表格的橫列 (row)-->
+        <th scope="col" align='center' valign="middle">大樓名稱</th>
+        <th scope="col" align='center' valign="middle">宿舍房號</th>
+         <th scope="col" align='center' valign="middle">容納人數</th>
+          <th scope="col" align='center' valign="middle">費用</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each message}}
+      <tr>
+        
+          {{!-- <input type="hidden" name="type" value="{{this.E_Type}}"> --}}
+          <th scope="row"  valign="middle">
+           {{this.DB_Name}}
+          </th>
+            <td  valign="middle">
+                 {{this.D_Number}}
+            </td>
+            <td  valign="middle">
+             {{this.D_Capacity}}
+              </div>
+            </td>
+            <td  valign="middle">
+              {{this.D_Cost}}
+            </td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</div>
     <a href="#top" class="top" style="float: right;display: none" id="up"><i  style="width: 50px;height: 50px;"class="fa-regular fa-circle-up"></i></a>
     <!-- Footer-->
     <br /><br /><br /><br /><br /><br /><br />
