--- a/views/home_manager.hbs
+++ b/views/home_manager.hbs
@@ -140,7 +140,7 @@
           <!-- Post preview-->
           <div class="post-preview">
             <a href="/manager_to_dormitory">
-              <h2 class="post-title">宿舍大樓資料</h2>
+              <h2 class="post-title">大樓宿舍資料</h2>
               <h5 class="post-subtitle">
                 管理人員可以在此查詢所有房間或公共空間之設備種類、數量及狀況，<br>並提供報修功能可更新目前設備狀況
               </h5>
