--- a/views/home_student.hbs
+++ b/views/home_student.hbs
@@ -100,10 +100,16 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
           <!-- Post preview-->
           <div class="post-preview">
-  
             <a href="/student">
               <h2 class="post-title" style="display: inline;">學生基本資料</h2>
               <h5 class="post-subtitle">學生可以在此查看自己的基本資料，並可修改連絡電話及e-mail</h5>
+            </a>
+          </div>
+            <hr class="my-4" />
+          <div class="post-preview">
+            <a href="/studentAccommodation">
+              <h2 class="post-title" style="display: inline;">個人住宿資料</h2>
+              <h5 class="post-subtitle">學生可以在此查看自己的宿舍資訊，包含房號、房型、同寢室友等</h5>
             </a>
           </div>
             <hr class="my-4" />
@@ -141,7 +147,7 @@
           <!-- Post preview-->
           <div class="post-preview">
             <a href="/student_to_dormitory">
-              <h2 class="post-title">宿舍大樓資料</h2>
+              <h2 class="post-title">大樓宿舍資料</h2>
               <h5 class="post-subtitle">
                 學生可以瀏覽所有的宿舍介紹，並可查看及報修該學生房間之設備
               </h5>
