--- a/views/home_supervisor.hbs
+++ b/views/home_supervisor.hbs
@@ -132,7 +132,7 @@
           <!-- Post preview-->
           <div class="post-preview">
             <a href="supervisor_to_dormitory">
-              <h2 class="post-title">宿舍大樓資料</h2>
+              <h2 class="post-title">大樓宿舍資料</h2>
               <h5 class="post-subtitle">
                 舍監可以在此查詢學生住宿資訊以及所有房間或公共空間之設備種類、數量及狀況，並提供報修功能可更新目前設備狀況
               </h5>
