--- a/public/studentAccommodation.css
+++ b/public/studentAccommodation.css
@@ -1,6 +1,9 @@
 table{
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+   
   }
   
   table tr{
@@ -18,6 +21,8 @@ table{
     color: white;
     text-align: center;
     padding: 10px 0;
+    height: 80px;
+    font-size: 22px;
   }
   
   table th:after{
@@ -35,10 +40,11 @@ table{
   
   table td{
     text-align: left;
-    width: 70%;
+    width: 50%;
     text-align: center;
     background-color: #eee;
     padding: 10px 0;
+    font-size: 22px;
   }
   
   .main {
