--- a/views/studentAccommodation.hbs
+++ b/views/studentAccommodation.hbs
@@ -66,7 +66,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link px-lg-3 py-3 py-lg-4"
+                class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
                 href="/dormitory_detail"
                 >Introduction</a
               >
